# sdtpl

./: .gitignore  default.nix  project-deps.nix  release.nix  sdtpl.cabal  shell.nix
src/Development/: SDTPL.hs
