name:                sdtpl
version:             0.1.0.0
synopsis:            The String Decision Tree Processing Language
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Peter Amidon
maintainer:          psa.pub.0@picnicpark.org
copyright:           (c) 2015 Peter S. Amidon <psa.pub.0@picnicpark.org>
category:            Development
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Development.SDTPL
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.11,
                       parsec >= 3.1 && <3.2,
                       containers >= 0.5 && <0.6,
                       template-haskell >= 2.10 && <2.13,
                       transformers >= 0.4 && <0.6,
                       mtl >= 2.2 && <2.3,
                       fgl >= 5.5 && <5.6,
                       graphviz >= 2999.18 && <2999.20,
                       text >= 1.2 && <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
